@@ -237,9 +237,9 @@
       </property>
       <property>
         <propertyName>version</propertyName>
-        <description>Version of the EC-Admin project&#10;&#10;History:&#10;- version 1.3:&#10;    + New procedure to delete jobs by results&#10;    + New parameter to cleanupJobs to skip jobs matching a pattern&#10;&#10;- version 1.2:  &#10;    + New  performance diagnostic procedure&#10;    + provide a getP Perl function for easy getProperty&#10;    + New procedure to delete workspace orphan job directories&#10;&#10;- version 1.1: &#10;      semaphore management&#10;      saveProjects&#10;&#10;- version 1.0: &#10;      initial version including job and artifact management&#10;</description>
+        <description>Version of the EC-Admin project&#10;&#10;History:&#10;- version 1.3.1:&#10;    + Added "available memory" information in performanceMetrics procedure&#10;&#10;- version 1.3:&#10;    + New procedure to delete jobs by results&#10;    + New parameter to cleanupJobs to skip jobs matching a pattern&#10;&#10;- version 1.2:  &#10;    + New  performance diagnostic procedure&#10;    + provide a getP Perl function for easy getProperty&#10;    + New procedure to delete workspace orphan job directories&#10;&#10;- version 1.1: &#10;      semaphore management&#10;      saveProjects&#10;&#10;- version 1.0: &#10;      initial version including job and artifact management&#10;</description>
         <expandable>1</expandable>
-        <value>1.3</value>
+        <value>1.3.1</value>
       </property>
     </propertySheet>
     <credential>
@@ -2342,7 +2342,30 @@
         <postProcessor></postProcessor>
         <precondition></precondition>
         <releaseMode>none</releaseMode>
-        <resourceName>windows</resourceName>
+        <resourceName></resourceName>
+        <shell>ec-perl</shell>
+        <timeLimit></timeLimit>
+        <timeLimitUnits>minutes</timeLimitUnits>
+        <workingDirectory></workingDirectory>
+        <workspaceName></workspaceName>
+        <propertySheet>
+        </propertySheet>
+      </step>
+      <step>
+        <stepName>Free RAM</stepName>
+        <alwaysRun>0</alwaysRun>
+        <broadcast>0</broadcast>
+        <command>$[/myProject/performances/scripts/perf.pm]&#10;&#10;#&#10;# Param&#10;#&#10;$DEBUG=$[debugMode];&#10;&#10;my $freeRAM=0;     # Amount of RAM in GB&#10;if ($OSNAME =~ /MSWin/) {&#10;  $freeRAM=`systeminfo | find "Available Physical Memory"`;&#10;  chomp $freeRAM;&#10;  printf("free RAM amount: %s\n", $freeRAM) if ($DEBUG);&#10;  # Available Physical Memory: 4,948 MB&#10;  $freeRAM =~ s/Available Physical Memory:\s+([\d,]+) MB/$1/m;&#10;  $freeRAM =~ s/,//;&#10;  printf("RAM amount: %d\n", $freeRAM) if ($DEBUG);&#10;} elsif ($OSNAME eq "linux") {&#10;  $freeRAM=`/usr/bin/free -m | grep "cache:" | awk '{print \$3}'`;&#10;  chomp $freeRAM;&#10;  printf("free RAM amount: %d\n", $freeRAM) if ($DEBUG);&#10;  $freeRAM /= 1024&#10;}  else {&#10;  printf ("OS: %s not supported for Commander Server\n", $OSNAME); &#10;  exit(2);&#10;}&#10;&#10;#&#10;# &#10;#&#10;if ($freeRAM == 0) {&#10;  printf ("Error getting the RAM amount on %s\n", $OSNAME);&#10;  exit(2);&#10;}&#10;&#10;my $str=sprintf("%3.1f MB\n", $freeRAM);&#10;printf("RAM amount: $str\n");&#10;InvokeCommander("SuppressLog", "setProperty", "summary", $str);&#10;&#10;</command>
+        <condition></condition>
+        <description>Check the amount of  free memory for the EC server&#10;Information only</description>
+        <errorHandling>failProcedure</errorHandling>
+        <exclusiveMode>none</exclusiveMode>
+        <logFileName></logFileName>
+        <parallel>0</parallel>
+        <postProcessor></postProcessor>
+        <precondition></precondition>
+        <releaseMode>none</releaseMode>
+        <resourceName></resourceName>
         <shell>ec-perl</shell>
         <timeLimit></timeLimit>
         <timeLimitUnits>minutes</timeLimitUnits>
