@@ -1,3 +1,8 @@
+2013-07-08 Laurent Rochette <lrochette@electric-cloud.com>
+
+	* EC-Admin.xml: new version 1.3.1 (performanceMetrics - add available memory
+	information)
+
 version 1.3:
     + New procedure to delete jobs by results
     + New parameter to cleanupJobs to skip jobs matching a pattern
